--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+header {
+  position: fixed;
+  width: 100%;
+  background: white;
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  border-bottom: 1px solid black;
+}
+
+#mobile-ham-menu::after {
+  content: "\2630";
+  font-size: 24px;
+}
+
 /* tablet */
 @media screen and (min-width: 481px) {
 }
