--- a/style.css
+++ b/style.css
@@ -15,12 +15,23 @@ header {
   font-size: 24px;
 }
 
+nav {
+  display: none;
+}
+
 /* tablet */
 @media screen and (min-width: 481px) {
 }
 
 /* small screens, laptops */
 @media screen and (min-width: 769px) {
+  nav {
+    display: block;
+  }
+
+  #mobile-ham-menu {
+    display: none;
+  }
 }
 
 /* desktops, large screens */
