--- a/style.css
+++ b/style.css
@@ -19,6 +19,28 @@ nav {
   display: none;
 }
 
+#content-wrapper {
+  padding-top: 80px;
+}
+
+.banner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-position: center;
+  background-size: cover;
+  color: white;
+  height: calc(100vh - 80px);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("https://images.unsplash.com/photo-1520250497591-112f2f40a3f4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2250&q=80");
+}
+
+.banner h1 {
+  font-size: 48px;
+  line-height: 72px;
+}
+
 /* tablet */
 @media screen and (min-width: 481px) {
 }
